# frengression_pkg

./: .gitignore  README.md  pyproject.toml
examples/: data_causl.R  distributional.ipynb  longitudinal.ipynb  utils.py
src/frengression/: __init__.py
tests/: test_usage.py
