[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "frengression"
version = "0.1.0"
description = "Frengression model packaged for easy install and reuse."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Linying Yang", email = "linying.yang@stats.ox.ac.uk" },
    { name = "Robin J. Evans", email = "evans@stats.ox.ac.uk" },
    { name = "Xinwei Shen", email = "xwshen@uw.edu" }
]

keywords = ["causal-inference", "generative-models", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "torch>=2.0",
    "engression",
]

[project.urls]
Homepage = "https://github.com/linyingyang/frengression_pkg"
Issues = "https://github.com/linyingyang/frengression_pkg/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["frengression*"]
